[tool.poetry]
name = "apimeter"
version = "2.11.1"
description = "One-stop solution for HTTP(S) testing."
license = "Apache-2.0"
readme = "README.md"
authors = ["debugtalk <debugtalk@gmail.com>"]

homepage = "https://github.com/httprunner/httprunner"
repository = "https://github.com/httprunner/httprunner"
documentation = "https://zhuifengshen.github.io/APIMeter/"

keywords = ["HTTP", "api", "test", "requests", "locustio"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

include = ["docs/CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22.0"
requests-toolbelt = "^0.9.1"
pyyaml = "5.1.2"
markupsafe = "1.1.1"
jinja2 = "2.10.3"
har2case = "0.3.1"
colorama = "0.4.1"
colorlog = "4.0.2"
filetype = "1.0.5"
jsonpath = "0.82.2"
sentry-sdk = "0.13.5"
jsonschema = "3.2.0"

[tool.poetry.group.dev.dependencies]
flask = "<1.0.0"
coverage = "^4.5.4"

[tool.poetry.scripts]
apimeter = "apimeter.cli:main"
apilocust = "apimeter.ext.locusts.cli:main"
hrun = "apimeter.cli:main"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
