[tool.poetry]
name = "apimeter"
version = "2.13.3"
description = "One-stop solution for HTTP(S) testing."
license = "Apache-2.0"
readme = "README.md"
authors = ["debugtalk <debugtalk@gmail.com>"]

homepage = "https://github.com/httprunner/httprunner"
repository = "https://github.com/httprunner/httprunner"
documentation = "https://zhuifengshen.github.io/APIMeter/"

keywords = ["HTTP", "api", "test", "requests", "locustio"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

include = ["docs/CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.6"
requests = ">=2.22.0,<3.0"
requests-toolbelt = ">=0.9.1,<1.0"
filetype = ">=1.0.5,<2.0"
pyyaml = ">=5.4.1,<7.0"
jinja2 = ">=2.11.3,<3.1"
colorama = ">=0.4.1,<1.0"
colorlog = ">=4.0.2,<5.0"
jsonpath = ">=0.82.2"
sentry-sdk = ">=0.13.5,<2.0"
jsonschema = ">=3.2.0,<4.0"

[tool.poetry.dev-dependencies]
flask = ">=1.1.4,<2.3"
coverage = ">=6.2,<7.0"

[tool.poetry.scripts]
apimeter = "apimeter.cli:main"
api = "apimeter.cli:main"
meter = "apimeter.cli:main"
apilocust = "apimeter.ext.locusts.cli:main"
hrun = "apimeter.cli:main"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.core.masonry.api"
